[tool.poetry]
name = "tmetrics-wrapper"
version = "1.0.0"
description = ""
authors = ["avix133 <avix133@gmail.com>"]
packages = [{ include = "*", from = "tmetrics_wrapper/src" }]

[tool.poetry.dependencies]
python = "^3.12.0"
requests = "^2.32.3"
click = "^8.1.7"
pandas = "^2.2.3"
tabulate = "^0.9.0"
termcolor = "^2.4.0"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "7.4.4"

[tool.poetry.scripts]
tmetrics-wrapper = "tmetrics_wrapper.tmetrics_wrapper:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".", "tmetrics_wrapper/src", "tests"
]
